updated UserScheduler to send weekly sentiment data to Kafka with fallback to email